--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
+        # 하나의 엔티티에 대한 연관관계를 불러올때 , 불러올 데이터의 수 ex) teamA 는 member1,member2 가 있을때
+        # select t Team t join t.members 에서 members가 로딩될때 where in 문안에 데이터가 들어감
         default_batch_fetch_size: 100
         format_sql: true
 
